force-app/main/default/objects/Snapshot__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>