force-app/main/default/objects/Snapshot__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Snapshot has been created successfully</description>
    <inlineHelpText>Checked if Snapshot has been created successfully</inlineHelpText>
    <label>Is Completed?</label>
    <type>Checkbox</type>
</CustomField>