force-app/main/default/objects/Snapshot__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organization</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Snapshots</relationshipLabel>
    <relationshipName>Snapshot</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>