force-app/main/default/objects/Snapshot__c/recordTypes/Commerce_Cloud.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Commerce_Cloud</fullName>
    <label>Commerce Cloud</label>
</RecordType>