force-app/main/default/objects/Snapshot__c/recordTypes/MuleSoft.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>MuleSoft</fullName>
    <label>MuleSoft</label>
</RecordType>